k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: twito-deployment
  labels:
    app: twito
spec:
  replicas: 1
  selector:
    matchLabels:
      app: twito
  template:
    metadata:
      labels:
        app: twito
    spec:
      containers:
      - name: twito
        image: rg.fr-par.scw.cloud/djnd/twito:latest
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: twito-persistent-storage
          mountPath: /db
      volumes:
      - name: twito-persistent-storage
        persistentVolumeClaim:
          claimName: twito-db-pv-claim
