k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: twito-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: muki.k8s.djnd.si
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: twito
            port:
              number: 80
